# laoyaoUmi

./: .gitignore  CMakeLists.txt  Makefile  ThreadPool.h  alignment_3n_table.h  hisat_3n_table.h  main.cpp  position_3n_table.h  utility_3n_table.h
